# sora-proxyapi-desktop

./: .cache_ggshield  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  index.html  lesson.md  openapi.json  package-lock.json  package.json  progress.txt  tsconfig.json  vite.config.ts
.github/workflows/: build-macos.yml  build-release.yml
docs/plans/: 2026-03-20-linxi-video-studio-design.md  2026-03-20-linxi-video-studio-implementation.md  2026-03-20-tauri-sora-desktop-design.md  2026-03-20-tauri-sora-desktop-implementation.md  2026-03-22-video-generation-workflow.md
scripts/: build-macos-app.sh
sora-linxi/: package.json
sora-linxi/src-tauri/: Cargo.toml  tauri.conf.json
sora-linxi/src-tauri/src/: main.rs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: App.tsx  workspace-types.ts
src/features/config/: SettingsForm.tsx  settings-store.ts  settings-types.ts
tests/: setup.ts
tests/e2e/: api-integration.test.ts  env-check.test.ts  sora2-generation.test.ts
tests/integration/: generation-polling.test.ts
tests/unit/: app-shell.test.tsx  app-workflow.test.tsx  build-config.test.ts  generation-form.test.tsx  image-picker.test.tsx  image-preprocess.test.ts  linxi-create-client.test.ts  linxi-query-client.test.ts  linxi-remix-client.test.ts  model-fetch-client.test.ts  recent-jobs-store.test.ts  settings-form.test.tsx  upload-client.test.ts  use-generation-job.test.ts  use-remix-job.test.ts  video-cache.test.ts  video-download.test.ts  video-preview.test.tsx
(+27 files in other folders)
