[package]
name = "sora_desktop"
version = "0.1.0"
description = "Sora Desktop App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.5.6", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.3"
tauri-plugin-http = { version = "2.5.7", features = ["multipart"] }
tauri-plugin-upload = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
